tests/base/invalid/List_CompileFail_1.whiley


void ::main(System.Console sys):
     x = 1
     a2[0] = x
